--- a/YManage/war/YManage.html
+++ b/YManage/war/YManage.html
@@ -41,6 +41,10 @@
       </div>
     </noscript>
 
+	<iframe src="javascript:''"
+          id="__gwt_historyFrame"
+          style="position:absolute;width:0;height:0;border:0"></iframe>
+          
     <h1>Web Application Starter Project</h1>
 
     <table align="center">
@@ -55,5 +59,6 @@
         <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
       </tr>
     </table>
+    
   </body>
 </html>
